# asphalt-wamp

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  README.rst  crossbar-config.yaml  docker-compose.yml  setup.cfg  setup.py  tox.ini
asphalt/wamp/: __init__.py  client.py  component.py  context.py  events.py  extras_providers.py  pytest.py  registry.py  router.py  serializers.py  utils.py
docs/: conf.py  configuration.rst  dynamic_auth.rst  index.rst  testing.rst  usage.rst  versionhistory.rst
docs/modules/: registry.rst
examples/: README.rst  crossbar-config.yaml  crossbar-docker.sh  docker-compose.yml
examples/.crossbar/: config.yaml
examples/pubsub/: publisher.py  subscriber.py
examples/pubsub/.crossbar/: config.yaml
examples/rpc/: client.py  server.py
examples/rpc_auth_ticket/: client.py  server.py
examples/rpc_auth_ticket/.crossbar/: config.yaml
examples/rpc_auth_wampcra/: client.py  server.py
examples/rpc_auth_wampcra/.crossbar/: config.yaml
examples/rpc_progress/: client.py  server.py
examples/rpc_registry/: client.py  server.py
tests/: config.yaml  conftest.py  test_client.py  test_component.py  test_context.py  test_events.py  test_registry.py  test_router.py  test_serializers.py  test_utils.py
