[metadata]
name = asphalt-wamp
description = WAMP client component for the Asphalt framework
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
url = https://github.com/asphalt-framework/asphalt-wamp
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Communications
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = asphalt.wamp
install_requires =
    asphalt ~= 4.0
    asphalt-serialization ~= 4.0
    autobahn >= 17.5.1
    typeguard ~= 2.0

[options.extras_require]
test =
    cbor2
    msgpack-python
    pytest
    pytest-cov
    pytest-catchlog
    pytest-asyncio >= 0.5.0
doc =
    Sphinx >= 1.5
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0
    sphinxcontrib-asyncio >= 0.2.0

[options.entry_points]
asphalt.components =
    wamp = asphalt.wamp.component:WAMPComponent

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = asphalt.wamp
branch = 1

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99
exclude = .tox,docs
ignore = E251
